# comet

./: .gitignore  Cargo.toml  README.md  flake.nix  icon.blend
assets/: pen.blend
res/comet/: pen.glb
src/: main.rs  pen.rs
