[package]
name = "comet"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.23.0", features = ["mint", "serde"] }
tokio = { version = "1.22.0", default-features = false, features = ["rt"] }
map-range = "0.1.1"
derive-where = "1.2.7"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[dependencies.stardust-xr-asteroids]
# git = "https://github.com/StardustXR/asteroids.git"
# branch = "dev"
path = "../../asteroids2"
