[package]
name = "comet"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.23.0", features = ["mint", "serde"] }
tokio = { version = "1.22.0", default-features = false, features = ["rt"] }
map-range = "0.1.1"
derive-where = "1.2.7"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.stardust-xr-fusion]
# version = "0.50.0"
git = "https://github.com/StardustXR/core.git"

[dependencies.stardust-xr-molecules]
# version = "0.50.0"
git = "https://github.com/StardustXR/molecules.git"

[dependencies.stardust-xr-asteroids]
# version = "0.50.0"
git = "https://github.com/StardustXR/asteroids.git"
